# PyNifly

./: .gitignore  .gitmodules  ANIMATIONS.md  DEVELOPERS.md  NIF_ANIMATIONS.md  PROJECT_PLAN.md  README.md  RELEASE_NOTES.md  TODO.md  add_private_virtualground.py  anim_test_runner.py  check_backup_flags.py  check_collision_bone_weights.py  check_hdt_config_ref.py  check_hdt_reference.py  check_original_flags.py  check_tail_extra_data.py  check_virtualground_weights.py  check_yas_hdt.py  compare_compressed_mesh.py  compare_tails.py  fix_all_tail_configs.ps1  fix_all_tail_configs.py  fix_tail_flags.py  inspect_skyfurry_tail.py  inspect_tail.py  pynifly_test_runner.py  set_all_flags_14.py  test_runner.py
.claude/: settings.json  settings.local.json
NiflyDLL/: Anim.cpp  Anim.h  CMakeLists.txt  Logger.cpp  Logger.hpp  NiflyDLL-Beast.vcxproj  NiflyDLL.aps  NiflyDLL.sln  NiflyDLL.vcxproj  NiflyDLL.vcxproj.filters  NiflyDefs.hpp  NiflyFunctions.cpp  NiflyFunctions.hpp  NiflyWrapper.cpp  NiflyWrapper.hpp  Resource.rc  TestDLL.cpp  resource.h  resource1.h
NiflyDLL/Debug/: NiflyDLL.dll.recipe  NiflyDLL.exp  NiflyDLL.ilk  NiflyDLL.lib  NiflyDLL.vcxproj.FileListAbsolute.txt  TestNifly.ilk  vc142.idb
NiflyDLL/NiflyDLL/Test/: Resource.res  vc143.idb
NiflyDLL/enc_temp_folder/86bedfccbdc73eddda73697d41b079/: Objects.hpp
NiflyDLL/enc_temp_folder/e4a3fc94b5fcca77dab71144050e8db/: TestDLL.cpp
NiflyDLL/include/: Anim.hpp  NiflyFunctions.hpp  NiflyWrapper.hpp
NiflyDLL/src/: Anim.cpp  Logger.cpp  NiflyFunctions.cpp  NiflyWrapper.cpp
NiflyDLL/tests/: TestDLL.cpp
NiflyDLL/x64/Debug/: NiflyDLL.dll.recipe  NiflyDLL.exp  NiflyDLL.lib  NiflyDLL.vcxproj.FileListAbsolute.txt  vc142.idb
NiflyDLL/x64/Debug/NiflyDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NiflyDLL.lastbuildstate  NiflyDLL.write.1u.tlog  link.28748.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
NiflyDLL/x64/Package/: NiflyDLL.dll.recipe  NiflyDLL.exp  NiflyDLL.lib  NiflyDLL.vcxproj.FileListAbsolute.txt  vc142.idb
NiflyDLL/x64/Package/NiflyDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NiflyDLL.lastbuildstate  NiflyDLL.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
NiflyDLL/x64/Release/: NiflyDLL.exp  NiflyDLL.lib
NiflyDLL/x64/Release/NiflyDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.delete.1.tlog  rc.command.1.tlog  rc.write.1.tlog
NiflyDLL/x64/Test/: NiflyDLL.dll.recipe  NiflyDLL.exp  NiflyDLL.lib  NiflyDLL.vcxproj.FileListAbsolute.txt  vc142.idb
NiflyDLL/x64/Test/NiflyDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NiflyDLL.lastbuildstate  NiflyDLL.write.1u.tlog  link.11780.delete.1.tlog  link.14268.delete.1.tlog  link.15736.delete.1.tlog  link.18148.delete.1.tlog  link.18656.delete.1.tlog  link.21280.delete.1.tlog  link.22464.delete.1.tlog  link.26892.delete.1.tlog  link.6084.delete.1.tlog  link.6392.delete.1.tlog  link.7084.delete.1.tlog  link.9460.delete.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
PyNifly/: 1hm_attackpowerright  Action  BonesRename.py  FemaleEyesAO0  (+36 more)
(+668 files in other folders)
